# Articles_Dataframe

./: README  README.md  config.yaml  config_api_ieee.yaml  config_api_sdc.yaml  constants.py  df_concat_api.db  main.ipynb  notebook.ipynb  pyproject.toml  python_api.py
.github/workflows/: main.yml
dados/: ACM_1.bib  ACM_10.bib  ACM_11.bib  ACM_12.bib  ACM_13.bib  ACM_14.bib  ACM_15.bib  ACM_16.bib  ACM_17.bib  ACM_18.bib  ACM_19.bib  ACM_2.bib  ACM_20.bib  ACM_21.bib  ACM_22.bib  ACM_23.bib  ACM_24.bib  ACM_25.bib  ACM_26.bib  ACM_27.bib  ACM_28.bib  ACM_29.bib  ACM_3.bib  ACM_30.bib  ACM_31.bib  ACM_32.bib  ACM_33.bib  ACM_34.bib  ACM_35.bib  ACM_36.bib  ACM_37.bib  ACM_38.bib  ACM_39.bib  ACM_4.bib  ACM_5.bib  ACM_6.bib  ACM_7.bib  ACM_8.bib  ACM_9.bib  IEEE_1.bib  (+83 more)
dados/ACM/: ACM.bib  ACM_1.bib  ACM_10.bib  ACM_11.bib  ACM_12.bib  ACM_13.bib  ACM_14.bib  ACM_15.bib  ACM_16.bib  ACM_17.bib  ACM_18.bib  ACM_19.bib  ACM_2.bib  ACM_20.bib  ACM_21.bib  ACM_22.bib  ACM_23.bib  ACM_24.bib  ACM_25.bib  ACM_26.bib  ACM_27.bib  ACM_28.bib  ACM_29.bib  ACM_3.bib  ACM_30.bib  ACM_31.bib  ACM_32.bib  ACM_33.bib  ACM_34.bib  ACM_35.bib  ACM_36.bib  ACM_37.bib  ACM_38.bib  ACM_39.bib  ACM_4.bib  ACM_5.bib  ACM_6.bib  ACM_7.bib  ACM_8.bib  ACM_9.bib
dados/IEEE/: IEEE.bib  IEEE_1.bib  IEEE_10.bib  IEEE_3.bib  IEEE_5.bib  IEEE_9.bib
dados/SDC/: SDC_3.bib  SDC_5.bib  SDC_6.bib  (+1 more)
python/: cleaner_df.py  main.py  read_files.py  save_df.py
resultados/: results.csv  results.json  results.xml  results.yaml  results_rank.csv  results_rank.json  results_rank.xml  results_rank.yaml
(+37 files in other folders)
