[tool.poetry]
name = "articles_dataframe"
version = "1.0.0"
description = ""
authors = ["Lucas Lazzarini"]

[tool.poetry.dependencies]
python = "==3.9.13"
python-dotenv = "==0.19.2"

pandas = "==1.4.2"
s3fs = "==0.4.0"
pyarrow = "==7.0.0"

[tool.poetry.dev-dependencies]
flake8 = "==4.0.1"
PyYAML = "==6.0"
bibtexparser = "==1.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
